// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Connection report storage > Should create a connection event if its after a day 1`] = `
[
  {
    "client_id": "client_week",
    "sdk": "powersync-js/1.24.5",
    "user_agent": "powersync-js/1.21.0 powersync-web Firefox/141 linux",
    "user_id": "user_week",
  },
  {
    "client_id": "client_week",
    "sdk": "powersync-js/1.24.5",
    "user_agent": "powersync-js/1.21.0 powersync-web Firefox/141 linux",
    "user_id": "user_week",
  },
]
`;

exports[`Connection report storage > Should create a sdk event if its after a day 1`] = `
[
  {
    "client_id": "client_week",
    "sdk": "powersync-js/1.24.5",
    "user_agent": "powersync-js/1.21.0 powersync-web Firefox/141 linux",
    "user_id": "user_week",
  },
  {
    "client_id": "client_week",
    "sdk": "powersync-js/1.24.5",
    "user_agent": "powersync-js/1.21.0 powersync-web Firefox/141 linux",
    "user_id": "user_week",
  },
]
`;

exports[`Connection report storage > Should delete rows older than specified range 1`] = `
{
  "sdks": [
    {
      "clients": 1,
      "sdk": "powersync-dart/1.6.4",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.1",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.2",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.4",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.24.5",
      "users": 1,
    },
  ],
  "users": 5,
}
`;

exports[`Connection report storage > Should show connected users with start range 1`] = `
{
  "sdks": [
    {
      "clients": 1,
      "sdk": "powersync-dart/1.6.4",
      "users": 1,
    },
  ],
  "users": 1,
}
`;

exports[`Connection report storage > Should show connected users with start range and end range 1`] = `
{
  "sdks": [
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.1",
      "users": 1,
    },
  ],
  "users": 1,
}
`;

exports[`Connection report storage > Should show connection report data for user over the past day 1`] = `
{
  "sdks": [
    {
      "clients": 1,
      "sdk": "powersync-dart/1.6.4",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.1",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.4",
      "users": 1,
    },
  ],
  "users": 3,
}
`;

exports[`Connection report storage > Should show connection report data for user over the past month 1`] = `
{
  "sdks": [
    {
      "clients": 1,
      "sdk": "powersync-dart/1.6.4",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.1",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.2",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.4",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.23.6",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.23.7",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.24.5",
      "users": 1,
    },
  ],
  "users": 7,
}
`;

exports[`Connection report storage > Should show connection report data for user over the past week 1`] = `
{
  "sdks": [
    {
      "clients": 1,
      "sdk": "powersync-dart/1.6.4",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.1",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.2",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.21.4",
      "users": 1,
    },
    {
      "clients": 1,
      "sdk": "powersync-js/1.24.5",
      "users": 1,
    },
  ],
  "users": 5,
}
`;

exports[`Connection report storage > Should update a connected sdk event and make it disconnected 1`] = `
[
  {
    "client_id": "client_three",
    "sdk": "powersync-js/1.21.2",
    "user_agent": "powersync-js/1.21.0 powersync-web Firefox/141 linux",
    "user_id": "user_three",
  },
]
`;

exports[`Connection report storage > Should update a connection event and make it disconnected 1`] = `
[
  {
    "client_id": "client_three",
    "sdk": "powersync-js/1.21.2",
    "user_agent": "powersync-js/1.21.0 powersync-web Firefox/141 linux",
    "user_id": "user_three",
  },
]
`;

exports[`Connection report storage > Should update a connection event if its within a day 1`] = `
[
  {
    "client_id": "client_one",
    "sdk": "powersync-dart/1.6.4",
    "user_agent": "powersync-dart/1.6.4 Dart (flutter-web) Chrome/128 android",
    "user_id": "user_one",
  },
]
`;

exports[`Connection report storage > Should update a sdk event if its within a day 1`] = `
[
  {
    "client_id": "client_one",
    "sdk": "powersync-dart/1.6.4",
    "user_agent": "powersync-dart/1.6.4 Dart (flutter-web) Chrome/128 android",
    "user_id": "user_one",
  },
]
`;
